# parser

./: .aliases  .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE.md  LICENSE.txt  NOTICE.txt  README.md  build.sh  clean.sh  dev  extract_packages.sh  g2cpp.sh  mainpage.md  packages.sh  purge_backups  regen_ba  regen_g  test-with-tau.sh  w64-debug.sh  w64-packages.sh  w64-release.sh
.github/workflows/: doxygen.yml  nightly-packages.yml
cmake/: ftxui.cmake  idni-common.cmake  installation.cmake  parser-common.cmake  specialize.cmake  target_git_definitions.cmake  target_setup.cmake  tauparser-packages.cmake  use-ccache.cmake  use-icecream.cmake  version_license.cmake  version_license.h.template
cmake/specialize/: specialized_main.cpp.in
cmake/use-icecream/: icecc-env-resolve  icecc-terminal-log
docs/: char_class_fns.md  charclasses.md  conjs.md  devhelpers.md  diagnostics.md  diagnostics_quickstart.md  disjs.md  forest.md  forest_graph.md  forest_tree.md  functions.md  grammar.md  grammar_options.md  lit.md  lits.md  measure.md  nonterminals.md  parser.md  parser_error.md  parser_input.md  parser_options.md  parser_pnode.md  parser_result.md  prod.md  prods.md  programatic_grammar.md  recoders.md  rewriting.md  shaping_options.md  tau_grammar_form.md  tau_grammar_format.md  terminals_extraction.md  tgf.md  tgf_tool.md  traverser.md  utf8.md
examples/: CMakeLists.txt
examples/basic_arithmetic/: basic_arithmetic.g  basic_arithmetic.grammar.inc.h  main.cpp
examples/basic_arithmetic_tgf/: main.cpp
examples/bitparser/: main.cpp
examples/csv_parser/: main.cpp
examples/csv_parser1/: main.cpp
examples/csv_parser10/: csv.tgf  csv_parser.generated.h  gen  main.cpp
examples/csv_parser2/: main.cpp
examples/csv_parser3/: main.cpp
examples/csv_parser4/: main.cpp
examples/csv_parser5/: main.cpp
examples/csv_parser6/: main.cpp
examples/csv_parser7/: main.cpp
examples/csv_parser8/: main.cpp
examples/csv_parser9/: main.cpp
examples/g2cpp/: main.cpp
examples/json_parser/: main.cpp
examples/tau_parser/: main.cpp
examples/tml_parser/: gen  main.cpp  tml.tgf  tml_parser.generated.h
js/: CMakeLists.txt  embindings.cpp  tauparser.html  tauparser.node.js
regression/: CMakeLists.txt
regression/tree_extraction/: main.cpp
regression/tree_extraction_tgf/: main.cpp  tree_extraction.generated.h  tree_extraction.tgf
scripts/: README.md  build.sh  devrc  extract-packages.sh  get-emsdk.sh  js-debug.sh  js-release.sh  packages.sh  preset.sh  specialize-test.sh  specialize.sh  test-with-tau.sh  tgf.sh  w64-debug.sh  w64-packages.sh  w64-release.sh
src/: CMakeLists.txt  bintree.cpp  bintree.h  bintree.tmpl.h  bintree_traversals.tmpl.h  characters.cpp  characters.h  charclasses.cpp  charclasses.h  cli.cpp  cli.h  defs.h  devhelpers.h  forest.h  forest.tmpl.h  g.grammar.inc.h  g.grammar_char.inc.h  get_shaped_tree2.tmpl.h  glanguage.h  grammar.cpp  grammar.h  grammar.tmpl.h  measure.h  memory_map.h  parser.cpp  parser.h  parser.impl.h  parser.tmpl.h  parser_instance.h  parser_printing.cpp  parser_result.tmpl.h  parser_strings.h  parser_strings.tmpl.h  parser_term_color_macros.h  parser_tree.tmpl.h  recoders.cpp  recoders.h  repl.h  rewriting.h  term.cpp  (+7 more)
src/format/: csv.tgf  json.h  json.tgf
src/format/csv/: csv.tgf
src/format/json/: json.h  json.tgf
src/format/tgf/: tgf.tgf
src/glanguage/: g.g  g.grammar.inc.h  g.grammar_char.inc.h
src/tgf/: CMakeLists.txt  grammar_inspector.h  main.cpp  parser_gen.h  tgf_cli.cpp  tgf_cli.h  tgf_cli_options.h  tgf_repl.tgf  tgf_repl_parser.generated.h  tgf_test.h  tgf_test.tgf  tgf_test_parser.generated.h
src/tree/: Makefile  main.cpp  tree.h  vec.cpp  vec.h
src/utility/: annotated_forest.h  bintree.h  bintree.tmpl.h  bintree_traversals.tmpl.h  characters.cpp  characters.h  characters.impl.h  charclasses.cpp  charclasses.h  charclasses.impl.h  charclasses_unicode.generated.h  cli.cpp  cli.h  cli.impl.h  devhelpers.h  diagnostics.h  diagnostics.tmpl.h  escapes.h  escapes.tmpl.h  forest.h  forest.tmpl.h  hashing.h  measure.h  measure.tmpl.h  memory_map.h  repl.h  repl_ftxui.h  repl_ftxui.tmpl.h  repl_history.h  term.cpp  term.h  term.impl.h  term_colors.h  tree.h  tree.tmpl.h  tree_rewriter.inc.h  tree_rewriter.tmpl.h  tree_traversals.tmpl.h  tree_traversals_morris.tmpl.h  tree_traversals_post_order.tmpl.h  (+2 more)
tests/: CMakeLists.txt  README.md  bench_enhancements.cpp  doctest_enhancements.cpp  doctest_escapes.cpp  doctest_input.cpp  doctest_measure.cpp  doctest_tree.cpp  doctest_tree_rewriter.cpp  doctest_tree_traversal1.cpp  doctest_tree_traversal2.cpp  doctest_tree_traversals.cpp  doctest_utf8.cpp  init_test.h  stress_test.txt  stress_test1.txt  test_bintree.cpp  test_cli.cpp  test_input.cpp  test_parser.cpp  test_term_colors.cpp  test_tgf.cpp  test_threadsafety.cpp  test_tree.cpp  testing.h  tgf_test.tgf.test
tests/fixtures/: tau_parse_cases.txt  tiny.tgf
tools/: CMakeLists.txt  cli.cpp  cli.h
tools/parser_gen/: main.cpp  parser_gen.h
tools/tgf/: main.cpp  parser_gen.h  tgf_cli.cpp  tgf_cli.h  tgf_repl.tgf  tgf_repl_parser.generated.h  tgf_test.h  tgf_test_parser.generated.h
